# reddit-rpg

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: animation.rs  app.rs  camera.rs  character.rs  editor.rs  faces.rs  lib.rs  main.rs  mirror.rs  physics.rs  player.rs  runs.rs  sprite.rs  walks.rs  window.rs
src/movement/: mod.rs  runs.rs  walks.rs
src/object/: character.rs  floor.rs  mirror.rs  mod.rs
src/visibility/: mod.rs  z_index.rs
